SCR #664844 - fix: bonus item buttons gap for theme promo

--- a/src/modules/bonuses/components/bonus-item/styles/themes/_promo.scss
+++ b/src/modules/bonuses/components/bonus-item/styles/themes/_promo.scss
@@ -105,6 +105,7 @@
         &__btns {
             @include bm.get-mq-map('justify-self', $themePromo, 'btnsJustifySelf');
             grid-area: button;
+            gap: ef.get-value($themePromo, 'btnsFlexGap');
             align-self: ef.get-value($themePromo, 'btnsAlignSelf');
         }
 
